<resources>
    <string name="app_name">WanAndroid</string>
    <string name="empty">正在加载中&#8230;</string>
    <string name="tool">体系</string>
    <string name="official_account">公众号</string>
    <string name="square">广场</string>
    <string name="project">项目</string>
    <string name="hint_search">输入关键字进行搜索</string>
    <string name="label_hot_key">热门搜索</string>
    <string name="label_history_key">历史搜索</string>
    <string name="text_clear_all">清空</string>
    <string name="main_page">主页</string>
    <string name="history_search">历史搜索</string>
    <string name="search_result">搜索结果</string>

    <string name="text_label_top">置顶</string>
    <string name="text_label_fresh">新</string>

    <string name="title_all_permission">权限说明</string>
    <string name="message_all_permission">APP需要该权限才可以正常运行</string>

    <string name="transition_content">transition_web_view</string>

    <string name="search">搜索</string>
    <string name="cancel">取消</string>

    <string name="error_socket_timeout">网络请求超时</string>
    <string name="error_connect">网络连接错误</string>
    <string name="error_unauthorized">登录过期，请重新登录</string>
    <string name="error_client">请求信息有误</string>
    <string name="error_server">服务器错误</string>
    <string name="error_unknown">未知错误</string>
    <string name="error_net_other">网络错误</string>
</resources>
