<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/main"
        android:title="@string/main_page"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_tool"
        android:icon="@drawable/navigation"
        android:title="@string/tool"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/project"
        android:title="@string/project"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_official_account"
        android:icon="@drawable/square"
        android:title="@string/official_account"
        app:showAsAction="ifRoom" />

</menu>